# cse576_sp20_hw5

./: CMakeLists.txt  README.md  compile.sh
glew/lib/: libGLEW.so.2.2.0  libGLEWd.so.2.2  libGLEWd.so.2.2.0
glew/lib/cmake/glew/: glew-targets-debug.cmake  glew-targets-release.cmake  glew-targets.cmake
glew/lib/pkgconfig/: glew.pc
src/: filter_image.cpp  harris_image.cpp  image.h  matrix.cpp  matrix.h  panorama_image.cpp  process_image.cpp  resize_image.cpp  utils.h
src/pango/: CMakeLists.txt  pango-utils.h  test5-harris.cpp  test5-panorama.cpp  test5-proj.cpp
src/test/: make-panorama.cpp  test2.cpp  test5.cpp
vs/cse576-hw5/: cse576-HW5.sln  cse576-hw5.vcxproj  cse576-hw5.vcxproj.filters
vs/cse576-hw5/make-panorama/: make-panorama.vcxproj  make-panorama.vcxproj.filters
vs/cse576-hw5/pango-harris/: pango-harris.vcxproj  pango-harris.vcxproj.filters
vs/cse576-hw5/pango-panorama/: pango-panorama.vcxproj  pango-panorama.vcxproj.filters
vs/cse576-hw5/pango-projection/: pango-projection.vcxproj  pango-projection.vcxproj.filters
vs/cse576-hw5/test1/: test1.vcxproj  test1.vcxproj.filters
vs/cse576-hw5/test2/: test2.vcxproj  test2.vcxproj.filters
vs/cse576-hw5/test5/: test5.vcxproj  test5.vcxproj.filters
vs/pango-win/include/pangolin/: config.h  video_drivers.h
vs/pango-win/lib/: glew.lib  jpeg.lib  libpng16_static.lib  zlib.lib  zlibstatic.lib
